--- a/contenido/pag02.html
+++ b/contenido/pag02.html
@@ -7,6 +7,163 @@
     <title>Página 02</title>
 </head>
 <body>
-    Página 02
+    <div id="intro04">
+        <figure class="cont-imagen">
+            <img src="./build/img/contenido/Pag02/Personaje.svg" alt="Personaje">
+        </figure>
+        <div id="cont-parrafo">
+            <div id="globo04" class="contenedor">
+                <p>Comencemos con el contexto de <span class="resaltar">las obligaciones a las que nos sujetamos en Grupo Peña Verde para la Prevención de Lavado de Dinero.</span>  A continuación conocerás los antecedentes aplicables para las Aseguradoras y Reaseguradoras en cuanto a la publicación de las disposiciones:</p>
+            </div>
+        </div>
+    </div>
+
+    <div id="linea-tiempo">
+        <div id="linea-elementos">
+            <div class="cont-fecha" id="cont-fecha1">
+                <div class="fecha" id="fecha1">
+                    2000
+                </div>
+                <div id="cont-info1" class="cont-info">
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag02/Gafi.svg" alt="Gafi">
+                    </figure>
+                    <p>
+                        México es miembro del Grupo de Acción financiera Internacional (GAFI).
+                    </p>
+                </div>
+                <div class="flecha">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30" height="30" viewBox="0 0 41.006 42.2">
+                        <defs>
+                          <clipPath id="clip-path">
+                            <rect id="Rectángulo_110" data-name="Rectángulo 110" width="41.006" height="42.2" fill="#1b75bb"/>
+                          </clipPath>
+                        </defs>
+                        <g id="Grupo_71" data-name="Grupo 71" transform="translate(0 0)">
+                          <g id="Grupo_70" data-name="Grupo 70" transform="translate(0 0)" clip-path="url(#clip-path)">
+                            <path id="Trazado_297" data-name="Trazado 297" d="M1.958,42.2A1.958,1.958,0,0,1,0,40.242V1.958A1.958,1.958,0,0,1,2.937.262L40.027,21.677a1.958,1.958,0,0,1,0,3.391L21.482,35.775a1.958,1.958,0,1,1-1.958-3.391l15.608-9.012L3.916,5.349V40.242A1.958,1.958,0,0,1,1.958,42.2" transform="translate(0 0)" fill="#1b75bb"/>
+                          </g>
+                        </g>
+                      </svg>                      
+                </div>
+            </div>
+            <div class="cont-fecha" id="cont-fecha2">
+                <div class="fecha" id="fecha2">
+                    19/07/2012
+                </div>
+                <div id="cont-info2" class="cont-info">
+                    <p>
+                        Publicación de las disposiciones de carácter general del art. 140 de la Ley General de Instituciones y Sociedades Mutualistas de Seguros (LGISMS).
+
+                    </p>
+                </div>
+                <div class="flecha">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30" height="30" viewBox="0 0 41.006 42.2">
+                        <defs>
+                          <clipPath id="clip-path">
+                            <rect id="Rectángulo_110" data-name="Rectángulo 110" width="41.006" height="42.2" fill="#e96247"/>
+                          </clipPath>
+                        </defs>
+                        <g id="Grupo_72" data-name="Grupo 72" transform="translate(0 0)">
+                          <g id="Grupo_70" data-name="Grupo 70" transform="translate(0 0)" clip-path="url(#clip-path)">
+                            <path id="Trazado_297" data-name="Trazado 297" d="M1.958,42.2A1.958,1.958,0,0,1,0,40.242V1.958A1.958,1.958,0,0,1,2.937.262L40.027,21.677a1.958,1.958,0,0,1,0,3.391L21.482,35.775a1.958,1.958,0,1,1-1.958-3.391l15.608-9.012L3.916,5.349V40.242A1.958,1.958,0,0,1,1.958,42.2" transform="translate(0 0)" fill="#e96247"/>
+                          </g>
+                        </g>
+                      </svg>                      
+                </div>
+            </div>
+            <div class="cont-fecha" id="cont-fecha3">
+                <div class="fecha" id="fecha3">
+                    04/04/2015
+                </div>
+                <div id="cont-info3" class="cont-info">
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag02/Mazo.svg" alt="Mazo">
+                    </figure>
+                    <p>
+                        Entró en vigor la Ley de Instituciones de Seguros y Finanzas (LISF).
+                    </p>
+                </div>
+                <div class="flecha">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30" height="30" viewBox="0 0 41.006 42.2">
+                        <defs>
+                          <clipPath id="clip-path">
+                            <rect id="Rectángulo_110" data-name="Rectángulo 110" width="41.006" height="42.2" fill="#f9c931"/>
+                          </clipPath>
+                        </defs>
+                        <g id="Grupo_73" data-name="Grupo 73" transform="translate(0 0)">
+                          <g id="Grupo_70" data-name="Grupo 70" transform="translate(0 0)" clip-path="url(#clip-path)">
+                            <path id="Trazado_297" data-name="Trazado 297" d="M1.958,42.2A1.958,1.958,0,0,1,0,40.242V1.958A1.958,1.958,0,0,1,2.937.262L40.027,21.677a1.958,1.958,0,0,1,0,3.391L21.482,35.775a1.958,1.958,0,1,1-1.958-3.391l15.608-9.012L3.916,5.349V40.242A1.958,1.958,0,0,1,1.958,42.2" transform="translate(0 0)" fill="#f9c931"/>
+                          </g>
+                        </g>
+                      </svg>                      
+                </div>
+            </div>
+            <div class="cont-fecha" id="cont-fecha4">
+                <div class="fecha" id="fecha4">
+                    2018
+                </div>
+                <div id="cont-info4" class="cont-info">
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag02/Gafi.svg" alt="Mazo">
+                    </figure>
+                    <p>
+                        La GAFI emite recomendaciones con motivo de la evaluación mutua.
+                    </p>
+                </div>
+                <div class="flecha">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30" height="30" viewBox="0 0 41.006 42.2">
+                        <defs>
+                          <clipPath id="clip-path">
+                            <rect id="Rectángulo_110" data-name="Rectángulo 110" width="41.006" height="42.2" fill="#0c8f5a"/>
+                          </clipPath>
+                        </defs>
+                        <g id="Grupo_74" data-name="Grupo 74" transform="translate(0 0)">
+                          <g id="Grupo_70" data-name="Grupo 70" transform="translate(0 0)" clip-path="url(#clip-path)">
+                            <path id="Trazado_297" data-name="Trazado 297" d="M1.958,42.2A1.958,1.958,0,0,1,0,40.242V1.958A1.958,1.958,0,0,1,2.937.262L40.027,21.677a1.958,1.958,0,0,1,0,3.391L21.482,35.775a1.958,1.958,0,1,1-1.958-3.391l15.608-9.012L3.916,5.349V40.242A1.958,1.958,0,0,1,1.958,42.2" transform="translate(0 0)" fill="#0c8f5a"/>
+                          </g>
+                        </g>
+                      </svg>                      
+                </div>
+            </div>
+            <div class="cont-fecha" id="cont-fecha5">
+                <div class="fecha" id="fecha5">
+                    19/11/2020
+                </div>
+                <div id="cont-info5" class="cont-info">
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag02/Pergamino.svg" alt="Mazo">
+                    </figure>
+                    <p>
+                        Publicación de las disposiciones de carácter general del art. 492 de la LISF, que dejaron sin vigor a las Disposiciones de Carácter General del art. 140 LGISMS.
+                    </p>
+                </div>
+                <div class="flecha">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30" height="30" viewBox="0 0 41.006 42.2">
+                        <defs>
+                          <clipPath id="clip-path">
+                            <rect id="Rectángulo_110" data-name="Rectángulo 110" width="41.006" height="42.2" fill="#652d90"/>
+                          </clipPath>
+                        </defs>
+                        <g id="Grupo_75" data-name="Grupo 75" transform="translate(0 0)">
+                          <g id="Grupo_70" data-name="Grupo 70" transform="translate(0 0)" clip-path="url(#clip-path)">
+                            <path id="Trazado_297" data-name="Trazado 297" d="M1.958,42.2A1.958,1.958,0,0,1,0,40.242V1.958A1.958,1.958,0,0,1,2.937.262L40.027,21.677a1.958,1.958,0,0,1,0,3.391L21.482,35.775a1.958,1.958,0,1,1-1.958-3.391l15.608-9.012L3.916,5.349V40.242A1.958,1.958,0,0,1,1.958,42.2" transform="translate(0 0)" fill="#652d90"/>
+                          </g>
+                        </g>
+                      </svg>
+                </div>
+            </div>
+            <div class="cont-fecha" id="cont-fecha6">
+                <div class="fecha" id="fecha6">
+                    31/12/2020
+                </div>
+                <div id="cont-info6" class="cont-info">
+                    <p>
+                        Entrada en vigor de las disposiciones del art. 492 LISF, que hoy en día regulan nuestra actividad en esta materia.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
