--- a/contenido/pag01.html
+++ b/contenido/pag01.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 01</title>
 </head>
+
 <body>
-    Página 01
+    <div id="seccion01">
+        <figure class="personaje1">
+            <img src="/build/img/Pag01/personaje.svg" alt="Personaje">
+        </figure>
+        <span class="texto01">Bienvenido al curso: 
+            <p class="texto02">Prevención del Lavado de Dinero y Financiamiento al Terrorismo</p>
+        </span>
+        <div id="cont-billetes">
+            <figure class="billetes">
+                <img src="/build/img/Pag01/billetes.svg" alt="Billetes">
+            </figure>
+        </div>
+        <div id="cont-boton">
+            <span id="texto">Para visualizar el contenido de tu curso, desliízate hacia abajo y da clic en los
+                elementos
+                interactivos que parpadean.</span>
+            <figure class="boton">
+                <img src="/build/img/Pag01/boton.svg" alt="Boton">
+            </figure>
+        </div>
+    </div>
+    <div id="seccion02">
+        <span id="texto">En este curso, aprenderás los siguientes temas:</span>
+        <div id="contenedor">
+            <figure class="circulo">
+                <img src="/build/img/Pag01/circulo.svg" alt="Circulo">
+            </figure>
+            <div id="lista">
+                <li>Antecedentes y Conceptos del Lavado de Dinero y Financiamiento al Terrorismo.</li>
+                <li>Historia de cambios en la regulación</li>
+                <li>Estapas de Lavado de Dinero</li>
+                <li>Tipologías y casos</li>
+            </div>
+            <figure class="personaje2">
+                <img src="/build/img/Pag01/personaje2.svg" alt="Personaje2">
+            </figure>
+        </div>
+        <div id="cont-verde">
+        </div>
+    </div>
 </body>
+
 </html>
