--- a/contenido/pag03.html
+++ b/contenido/pag03.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 03</title>
 </head>
+
 <body>
-    Página 03
+    <div id="cont-gris">
+        <div id="cont01">
+            <span id="LD">Lavado de Dinero</span>
+            <div id="cont01-imagen">
+                <figure class="lavadora">
+                    <img src="./build/img/contenido/Pag03/lavadora.svg" alt="Lavadora">
+                </figure>
+            </div>
+            <span id="texto01">
+                Son los actos/operaciones
+                que consisten en hacer que los fondos obtenidos a través de las comisión de delitos, aparezcan
+                como el fruto de actividades legales
+                y circulen sin problema
+                en el sistema financiero.
+            </span>
+        </div>
+        <span id="cont02">
+            El Lavado de Dinero es el proceso
+            a través del cual es encubierto el origen de los fondos generados mediante el ejercicio de algunas
+            actividades ilegales o criminales (tráfico de drogas, estupefacientes, contrabando de armas, corrupción,
+            fraude, prostitución, extorsión, piratería) y que circulen en
+            el sistema financiero.
+            Es el proceso de hacer
+            que el dinero sucio
+            parezca limpio.
+        </span>
+        <div id="cont03">
+            <span id="FT">Financiamiento al Terrorismo</span>
+            <div id="cont03-imagen">
+                <figure class="terrorista1">
+                    <img src="./build/img/contenido/Pag03/terrorista1.svg" alt="terrorista">
+                </figure>
+                <figure class="terrorista2">
+                    <img src="./build/img/contenido/Pag03/terrorista2.svg" alt="terrorista">
+                </figure>
+                <figure class="terrorista3">
+                    <img src="./build/img/contenido/Pag03/terrorista3.svg" alt="terrorista">
+                </figure>
+            </div>
+            <span id="texto03">
+                Proceso para obtener los bienes/recursos de procedencia lícita/ilícita, para presionar a los gobiernos
+                generando terror/temor en la población a través de actos que ponen en peligro la vida, la integridad
+                física o libertad, valiéndose de instrumentos capaces
+                de causar estragos.
+            </span>
+        </div>
+        <figure class="personaje">
+            <img src="./build/img/contenido/Pag03/personaje.svg" alt="Personaje">
+        </figure>
+    </div>
 </body>
+
 </html>
