--- a/contenido/pag01.html
+++ b/contenido/pag01.html
@@ -11,14 +11,14 @@
 <body>
     <div id="seccion01">
         <figure class="personaje1">
-            <img src="/build/img/Pag01/personaje.svg" alt="Personaje">
+            <img src="./build/img/contenido/Pag01/personaje.svg" alt="Personaje">
         </figure>
         <span class="texto01">Bienvenido al curso: 
             <p class="texto02">Prevención del Lavado de Dinero y Financiamiento al Terrorismo</p>
         </span>
         <div id="cont-billetes">
             <figure class="billetes">
-                <img src="/build/img/Pag01/billetes.svg" alt="Billetes">
+                <img src="./build/img/contenido/Pag01/billetes.svg" alt="Billetes">
             </figure>
         </div>
         <div id="cont-boton">
@@ -26,7 +26,7 @@
                 elementos
                 interactivos que parpadean.</span>
             <figure class="boton">
-                <img src="/build/img/Pag01/boton.svg" alt="Boton">
+                <img src="./build/img/contenido/Pag01/boton.svg" alt="Boton">
             </figure>
         </div>
     </div>
@@ -34,7 +34,7 @@
         <span id="texto">En este curso, aprenderás los siguientes temas:</span>
         <div id="contenedor">
             <figure class="circulo">
-                <img src="/build/img/Pag01/circulo.svg" alt="Circulo">
+                <img src="./build/img/contenido/Pag01/circulo.svg" alt="Circulo">
             </figure>
             <div id="lista">
                 <li>Antecedentes y Conceptos del Lavado de Dinero y Financiamiento al Terrorismo.</li>
@@ -43,7 +43,7 @@
                 <li>Tipologías y casos</li>
             </div>
             <figure class="personaje2">
-                <img src="/build/img/Pag01/personaje2.svg" alt="Personaje2">
+                <img src="./build/img/contenido/Pag01/personaje2.svg" alt="Personaje2">
             </figure>
         </div>
         <div id="cont-verde">
