--- a/contenido/pag04.html
+++ b/contenido/pag04.html
@@ -7,6 +7,134 @@
     <title>Página 04</title>
 </head>
 <body>
-    Página 04
+    <div id="cont-pagina04">
+        <div id="cont-instrucciones">
+            <div id="mensaje">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag04/Persona.svg" alt="Persona">
+                </figure>
+                <div id="globo">
+                    <p>
+                        Vamos a conocer tus obligaciones y posibilidades de actuación frente a una sospecha de ilícito en tu día a día; así como tu compromiso ético para evitar vincularte con dichos actos ilícitos.  
+                    </p>
+                </div>
+            </div>
+            <div id="instrucciones">
+                <figure id="mano">
+                    <img src="./build/img/contenido/Pag04/Mano.svg" alt="Mano">
+                </figure>
+                <p>Da clic en cada obligación para conocer más detalles.</p>
+            </div>
+        </div>
+
+        <div id="cont-info">
+            <div id="contenedor-relativo"></div>
+
+            <figure id="circulo-central">
+                <img src="./build/img/contenido/Pag04/CirculoAzul.svg" alt="Circulo">
+            </figure>
+                
+
+            <div id="cont-info-parrafo">
+                <div class="circulos-info activo" id="info-inicio">
+                    <p>Principales obligaciones para la Prevención del Lavado de Dinero y Financiamiento al Terrorismo
+                    </p>
+                </div>
+                <div class="info-parrafo" id="info1">
+                    <a class="btn-float" id="btn-1" href="">1. Identificación del Cliente</a>
+                    <div class="circulos-info" id="circulo1">
+                        <p>
+                            El objetivo de esta política es prevenir la relación con clientes que obtengan sus recursos de actividades ilícitas; al verificar su identidad, se pueden mitigar los riesgos operacionales, legales o reputacionales a los que pudiera estar expuesta la Compañía. También ayuda a prevenir usurpaciones de identidad.
+                        </p>
+                    </div>
+                </div>
+                <div class="info-parrafo" id="info2">
+                    <a class="btn-float" id="btn-2" href="">2. Conocimiento del Cliente</a>
+                    <div class="circulos-info" id="circulo2">
+                        <p>
+                            El pilar de prevención nos permite contrastar de manera real los datos y documentos del cliente contra la transaccionalidad declarada e histórica, asimismo de dejar constancia de la entrevista es el Formato de Identificación del Cliente con prima anual mayor a 7,500, para el caso de General de Seguros y General de Salud. Para el caso de Reaseguradora Patria es el Formato de Identificación de la Cedente.
+                        </p>
+                    </div>
+                </div>
+                <div class="info-parrafo" id="info3">
+                    <a class="btn-float" id="btn-3" href="">3. Metodología de Evaluación de Riesgos PLD/CFT</a>
+                    <div class="circulos-info" id="circulo3">
+                        <p>
+                            Esta Metodología nos permite entender cómo y hasta qué punto es vulnerable la Compañía a los riesgos en materia de LD/FT, lo que nos permite asignar adecuadamente nuestros recursos y aplicar procesos de gestión de riesgos efectivos a las características de esos riesgos.
+                        </p>
+                    </div>
+                </div>
+                <div class="info-parrafo" id="info4">
+                    <a class="btn-float" id="btn-4" href="">4. Reporte de Operaciones</a>
+                    <div class="circulos-info" id="circulo4">
+                        <p>
+                            Se refiere a detectar, identificar y reportar cualquier operación en efectivo o  sospechosa al Oficial de Cumplimiento y éste a su vez a las autoridades, ya sea de manera periódica o cuando sean detectadas.
+                        </p>
+                    </div>
+                </div>
+                <div class="info-parrafo" id="info5">
+                    <a class="btn-float" id="btn-5" href="">5. Estructuras Internas</a>
+                    <div class="circulos-info" id="circulo5">
+                        <p>
+                            Son las figuras cuya participación influyen en el correcto cumplimiento de las obligaciones para la Prevención del Lavado de Dinero y Combate al Financiamiento al Terrorismo.
+                        </p>
+                    </div>
+                </div>
+                <div class="info-parrafo" id="info6">
+                    <a class="btn-float" id="btn-6" href="">6. Capacitación y Difusión</a>
+                    <div>
+                        <p class="circulos-info" id="circulo6">
+                            Se refiere a la obligación que tenemos de capacitarnos en esta materia al inicio de la relación laboral con la Compañía y durante nuestro contrato, así como conocer cualquier actualización.
+                        </p>
+                    </div>
+                </div>
+                <div class="info-parrafo" id="info7">
+                    <a class="btn-float" id="btn-7" href="">7. Sistemas automatizados</a>
+                    <div class="circulos-info" id="circulo7">
+                        <h4>
+                            Las instituciones están obligadas a contar con un sistema automatizado, el cual debe:
+                        </h4>
+                        <ul>
+                            <li>
+                                Tener un estricto control en las operaciones 
+                                e información de los Clientes y Cedentes.
+                            </li>
+                            <li>
+                                Ser un instrumento útil para la detección y clasificación de las Operaciones relevantes, inusuales e internas preocupantes.
+                            </li>
+                            <li>
+                                Servir como enlace  para los reportes ante la CNSF.
+                            </li>
+                            <li>
+                                Simplificar procesos internos para gestionar el cumplimiento a las Disposiciones.
+                            </li>
+                            <li>
+                                Identificar a las personas en la Lista de Personas Bloqueadas.
+                            </li>
+                            <li>
+                                Ejecutar la Metodología de Evaluación de Riesgos.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="info-parrafo" id="info8">
+                    <a class="btn-float" id="btn-8" href="">8. Reserva y Confidencialidad</a>
+                    <div class="circulos-info" id="circulo8">
+                        <p>
+                            Mantener confidencialidad respecto de la información de cualquiera de los requerimientos de información y documentación, así como de órdenes de aseguramiento que formulen las autoridades para prevención,investigación, persecución y sanción en materia de Lavado de Dinero y Financiamiento al Terrorismo.
+                        </p>
+                    </div>
+                </div>
+                <div class="info-parrafo" id="info9">
+                    <a class="btn-float" id="btn-9" href="">9. Lista de Personas Bloquedas</a>
+                    <div class="circulos-info" id="circulo9">
+                        <p>
+                            Son emitidas por organismos y autoridades nacionales e internacionales; incluyen personas físicas y morales que participan o se relacionan con el lavado de dinero y el financiamiento al terrorismo.
+                        </p>
+                    </div>
+                </div>
+            </div>    
+        </div>
+    </div>
 </body>
 </html>
