:sparkles: Actualizar Funcion e Index.html

--- a/index.html
+++ b/index.html
@@ -54,19 +54,31 @@
             <a href="#" class="enlacesPaginas" data-pagina="1">
                 <div class="option">
                     <i class="fa-solid fa-file" title="Antecedentes y conceptos PLD y CFT"></i>
-                    <h4>Antecedentes y conceptos PLD y CFT</h4>
+                    <h4>Página 02</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="2">
                 <div class="option">
                     <i class="fa-solid fa-pencil" title="Actividad de reforzamiento"></i>
-                    <h4>Actividad de reforzamiento</h4>
+                    <h4>Página 03</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="3">
                 <div class="option">
                     <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Evaluación final</h4>
+                    <h4>Página 04</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="4">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 07</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="5">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 06</h4>
                 </div>
             </a>
         </div>
