:computer: Funcion pagina04

--- a/contenido/pag04.html
+++ b/contenido/pag04.html
@@ -37,20 +37,20 @@
             <div id="contenedor-info04">
                 <div id="position-relative">
                     <!-- <div id="enlaces04"> -->
-                        <a class="btn-float" id="btn-1" href="">1. Identificación del Cliente</a>
-                        <a class="btn-float" id="btn-2" href="">2. Conocimiento del Cliente</a>
-                        <a class="btn-float" id="btn-3" href="">3. Metodología de Evaluación de Riesgos PLD/CFT</a>
-                        <a class="btn-float" id="btn-4" href="">4. Reporte de Operaciones</a>
-                        <a class="btn-float" id="btn-5" href="">5. Estructuras Internas</a>
-                        <a class="btn-float" id="btn-6" href="">6. Capacitación y Difusión</a>
-                        <a class="btn-float" id="btn-7" href="">7. Sistemas automatizados</a>
-                        <a class="btn-float" id="btn-8" href="">8. Reserva y Confidencialidad</a>
-                        <a class="btn-float" id="btn-9" href="">9. Lista de Personas Bloquedas</a>
+                        <a class="btn-float" id="btn-1" href="#circulo1">1. Identificación del Cliente</a>
+                        <a class="btn-float" id="btn-2" href="#circulo2">2. Conocimiento del Cliente</a>
+                        <a class="btn-float" id="btn-3" href="#circulo3">3. Metodología de Evaluación de Riesgos PLD/CFT</a>
+                        <a class="btn-float" id="btn-4" href="#circulo4">4. Reporte de Operaciones</a>
+                        <a class="btn-float" id="btn-5" href="#circulo5">5. Estructuras Internas</a>
+                        <a class="btn-float" id="btn-6" href="#circulo6">6. Capacitación y Difusión</a>
+                        <a class="btn-float" id="btn-7" href="#circulo7">7. Sistemas automatizados</a>
+                        <a class="btn-float" id="btn-8" href="#circulo8">8. Reserva y Confidencialidad</a>
+                        <a class="btn-float" id="btn-9" href="#circulo9">9. Lista de Personas Bloquedas</a>
                     <!-- </div> -->
 
                     <!-- <div id="contenedores"> -->
 
-                        <div class="circulos-info activo" id="info-inicio">
+                        <div class="circulos-info circulo-activo" id="info-inicio">
                             <p>Principales obligaciones para la Prevención del Lavado de Dinero y Financiamiento al Terrorismo
                             </p>
                         </div>
