--- a/index.html
+++ b/index.html
@@ -72,13 +72,25 @@
             <a href="#" class="enlacesPaginas" data-pagina="4">
                 <div class="option">
                     <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 07</h4>
+                    <h4>Página 05</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="5">
                 <div class="option">
                     <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
                     <h4>Página 06</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="6">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 07</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="7">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 08</h4>
                 </div>
             </a>
         </div>
