--- a/contenido/pag08.html
+++ b/contenido/pag08.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina 06</title>
+    <title>Página 08</title>
 </head>
 <body>
-    Página 06
+    Página 08
 </body>
 </html>
