--- a/index.html
+++ b/index.html
@@ -93,6 +93,24 @@
                     <h4>Página 08</h4>
                 </div>
             </a>
+            <a href="#" class="enlacesPaginas" data-pagina="8">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 09</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="9">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 10</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="10">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 11</h4>
+                </div>
+            </a>
         </div>
     </aside>
 
