--- a/index.html
+++ b/index.html
@@ -123,6 +123,102 @@
                     <h4>Página 13</h4>
                 </div>
             </a>
+            <a href="#" class="enlacesPaginas" data-pagina="13">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 14</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="14">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 15</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="15">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 16</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="16">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 17</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="17">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 18</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="18">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 19</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="19">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 20</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="20">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 21</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="21">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 22</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="22">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 23</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="23">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 24</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="24">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 25</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="25">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 26</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="26">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 27</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="27">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 28</h4>
+                </div>
+            </a>
+            <a href="#" class="enlacesPaginas" data-pagina="28">
+                <div class="option">
+                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
+                    <h4>Página 29</h4>
+                </div>
+            </a>
         </div>
     </aside>
 
