--- a/contenido/pag06.html
+++ b/contenido/pag06.html
@@ -1,12 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 06</title>
 </head>
+
 <body>
-    Pagina 06
+    <div id="cont-azul"></div>
+    <div id="principal">
+        <div id="cont-small">
+            <span id="text">
+                Da clic en cada botón para conocer más detalles.
+                <figure class="mano">
+                    <img src="./build/img/contenido/Pag06/mano.svg" alt="mano">
+                </figure>
+            </span>
+            <figure class="personaje">
+                <img src="./build/img/contenido/Pag06/personaje.svg" alt="personaje">
+            </figure>
+        </div>
+        <div id="cont-big">
+            <div id="claro"></div>
+            <div id="columnas">
+                <div id="libro1">
+                    <a href="#cuadro1" class="btn-info01">
+                        <figure class="libro1">
+                            <img src="./build/img/contenido/Pag06/libro1.svg" alt="libro1">
+                        </figure>
+                    </a>
+                    <div  class ="cuadro1" id="cuadro">
+                        <span class="texto1">
+                            Por parte de un auditor independiente o una certificación de la institución extranjera, en
+                            el que explique que la institución da cumplimiento a obligaciones similares a las
+                            establecidas en México, respecto de la identificación y conocimiento
+                            de la Cedente.
+                        </span>
+                    </div>
+                </div>
+                <div id="libro2">
+                    <a href="#cuadro2" class="btn-info02">
+                        <figure class="libro2">
+                            <img src="./build/img/contenido/Pag06/libro2.svg" alt="libro2">
+                        </figure>
+                    </a>
+                    <div id="cuadro2">
+                        <span class="texto2">
+                            <li>Conocer el negocio al que se dedican las contrapartes.</li>
+                            <li>Evaluar sus controles para determinar que cumplen con los estándares internacionales
+                                de PLD/CFT.
+                            </li>
+                            <li>Conocer si dichas instituciones
+                                son supervisadas por alguna autoridad competente.
+                            </li>
+                            <li>Identificar su buena reputación, considerando si tienen sanciones por incumplimiento.
+                            </li>
+                        </span>
+                    </div>
+                </div>
+                <div id="libro3">
+                    <a href="#cuadro3" class="btn-info03">
+                        <figure class="libro3">
+                            <img src="./build/img/contenido/Pag06/libro3.svg" alt="libro3">
+                        </figure>
+                    </a>
+                    <div id="cuadro3">
+                        <span class="texto3">
+                            De acuerdo con la información
+                            de las autoridades mexicanas en materia de prevención PLD/CFT, las Aseguradoras deberán
+                            abstenerse de realizar operaciones de reaseguro o reafianzamiento
+                            con aquellos que no tengan presencia física en la jurisdicción.
+                            Cuando la Aseguradora tenga indicios sobre algún cliente que actúa por otra persona, deberá
+                            solicitar al cliente información para identificar al Propietario
+                            Real de los recursos involucrados
+                            en la operación.
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
