--- a/contenido/pag03.html
+++ b/contenido/pag03.html
@@ -38,14 +38,8 @@
         <div id="cont03">
             <span id="FT">Financiamiento al Terrorismo</span>
             <div id="cont03-imagen">
-                <figure class="terrorista1">
-                    <img src="./build/img/contenido/Pag03/terrorista1.svg" alt="terrorista">
-                </figure>
-                <figure class="terrorista2">
-                    <img src="./build/img/contenido/Pag03/terrorista2.svg" alt="terrorista">
-                </figure>
-                <figure class="terrorista3">
-                    <img src="./build/img/contenido/Pag03/terrorista3.svg" alt="terrorista">
+                <figure class="terrorista">
+                    <img src="./build/img/contenido/Pag03/terrorista.svg" alt="terrorista">
                 </figure>
             </div>
             <span id="texto03">
