--- a/contenido/pag03.html
+++ b/contenido/pag03.html
@@ -10,6 +10,9 @@
 
 <body>
     <div id="cont-gris">
+        <!-- <figure class="personaje">
+            <img src="./build/img/contenido/Pag03/personaje.svg" alt="Personaje">
+        </figure> -->
         <div id="cont01">
             <span id="LD">Lavado de Dinero</span>
             <div id="cont01-imagen">
@@ -26,14 +29,15 @@
             </span>
         </div>
         <span id="cont02">
-            El Lavado de Dinero es el proceso
-            a través del cual es encubierto el origen de los fondos generados mediante el ejercicio de algunas
-            actividades ilegales o criminales (tráfico de drogas, estupefacientes, contrabando de armas, corrupción,
-            fraude, prostitución, extorsión, piratería) y que circulen en
-            el sistema financiero.
-            Es el proceso de hacer
-            que el dinero sucio
-            parezca limpio.
+                El Lavado de Dinero es el proceso
+                a través del cual es encubierto el origen de los fondos generados mediante el ejercicio de algunas
+                actividades ilegales o criminales (tráfico de drogas, estupefacientes, contrabando de armas, corrupción,
+                fraude, prostitución, extorsión, piratería) y que circulen en
+                el sistema financiero.
+                Es el proceso de hacer
+                que el dinero sucio
+                parezca limpio.
+    
         </span>
         <div id="cont03">
             <span id="FT">Financiamiento al Terrorismo</span>
@@ -49,9 +53,6 @@
                 de causar estragos.
             </span>
         </div>
-        <figure class="personaje">
-            <img src="./build/img/contenido/Pag03/personaje.svg" alt="Personaje">
-        </figure>
     </div>
 </body>
 
