:rocket: add pag9 y pag10

--- a/contenido/pag05.html
+++ b/contenido/pag05.html
@@ -126,7 +126,7 @@
 
     <div id="cont-botones05">
         <div id="cont-instrucciones">
-            <div class="intrucciones-mano">
+            <div class="instrucciones-mano">
                 <div class="cont-imagen">
                     <img src="/build/img/contenido/Pag05/Mano.svg" alt="Mano">
                 </div>
