--- a/contenido/pag10.html
+++ b/contenido/pag10.html
@@ -7,6 +7,37 @@
     <title>Página 10</title>
 </head>
 <body>
-    Página 10
+    <div id="cont-pag10">
+        <div id="cont-mensaje10">
+            <figure class="cont-imagen">
+                <img src="./build/img/contenido/Pag10/persona.svg" alt="persona">
+            </figure>
+            <div id="mensaje">
+                <div id="globo">
+                    <p>
+                        A partir de la identificación del cliente se realiza el conocimiento del cliente que nos permite generar un perfil transaccional del cliente y verificar que su comportamiento sea acorde con las operaciones que realiza el Cliente y así como saber si se trata de una Persona Políticamente Expuesta (PPE o PEP). 
+                    </p>
+                    <p>
+                        Para conocer más sobre este tema, da clic en el botón y descarga la infografía:
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div id="cont-descarga">
+            <div class="instrucciones-mano">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag10/Mano.svg" alt="mano">
+                </figure>
+                <p>
+                    Da clic aquí para descargar la infografía.
+                </p>
+            </div>
+            <a href="../Infografia/infografia_Pol_Conocimiento_Cliente_v2.pdf" target="_blank" title="Descargar Infografia">
+                <figure id="descarga">
+                    <img src="./build/img/contenido/Pag10/pdf.svg" alt="pdf">
+                </figure>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
