--- a/contenido/pag09.html
+++ b/contenido/pag09.html
@@ -7,6 +7,75 @@
     <title>Página 09</title>
 </head>
 <body>
-    Página 09
+    <div id="cont-pag09">
+        <figure id="persona" class="cont-imagen">
+            <img src="./build/img/contenido/Pag09/persona.svg" alt="persona">
+        </figure>
+        <div class="hojas09" id="hoja09_1">
+            <div class="puntos09">
+                <p>
+                    Al menos una vez al año las entidades deben identificar que los expedientes clasificados como ALTO RIESGO estén completos.
+                </p>
+                <figure class="contimagen">
+                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                </figure>
+            </div>
+            <div class="puntos09">
+                <p>
+                    Si durante la relación comercial se detectan cambios significativos en el comportamiento transaccional, sin que exista causa justificada o surgen dudas sobre la veracidad o exactitud de los datos o documentos, se reclasifica al cliente como de grado de riesgo superior. Al analizarlo se deberá verificar y solicitar la actualización de sus datos y documentos.
+                </p>
+                <figure class="contimagen">
+                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                </figure>
+            </div>
+            <div class="puntos09">
+                <p>
+                    Las entidades cuentan con un sistema automatizado que permite conservar, actualizar y consultar los datos relativos al expediente de cada cliente. Es indispensable siempre tenerlo actualizado para agilizar cualquier consulta o aclaración. 
+
+                </p>
+                <figure class="contimagen">
+                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                </figure>
+            </div>
+        </div>
+        <div class="hojas09" id="hoja09_2">
+            <h4>
+                Para que el expediente se considere completo debe contener:
+            </h4>
+
+            <div class="puntos09">
+                <div class="cont-ul">
+                    <h5>Datos:</h5>
+                    <ul>
+                        <li>Que se incluyan los obligatorios.</li>
+                        <li>Que no tenga abreviaturas.</li>
+                        <li>Los datos declarados deberán coincidir con los documentos proporcionados.</li>
+                    </ul>
+                </div>
+
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                </figure>
+            </div>
+
+            <div class="puntos09">
+                <div class="cont-ul">
+                    <h5>Documentos:</h5>
+                    <ul>
+                        <li>No olvides corroborar que sean oficiales 
+                            y vigentes.</li>
+                        <li>Verifica que sean legibles.</li>
+                        <li>Copia del mismo documento: cotejo original y copia.</li>
+                        <li>Recibe solamente copias en buen estado.</li>
+                        <li>Sin tachaduras o enmendaduras.</li>
+                    </ul>
+                </div>
+
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                </figure>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
