--- a/contenido/pag03.html
+++ b/contenido/pag03.html
@@ -10,48 +10,52 @@
 
 <body>
     <div id="cont-gris">
-        <!-- <figure class="personaje">
-            <img src="./build/img/contenido/Pag03/personaje.svg" alt="Personaje">
-        </figure> -->
-        <div id="cont01">
+        <div class="cont-pag03" id="cont01">
             <span id="LD">Lavado de Dinero</span>
-            <div id="cont01-imagen">
+            <div class="card03">
                 <figure class="lavadora">
                     <img src="./build/img/contenido/Pag03/lavadora.svg" alt="Lavadora">
                 </figure>
+                <span id="texto01">
+                    Son los actos/operaciones
+                    que consisten en hacer que los fondos obtenidos a través de las comisión de delitos, aparezcan
+                    como el fruto de actividades legales
+                    y circulen sin problema
+                    en el sistema financiero.
+                </span>
             </div>
-            <span id="texto01">
-                Son los actos/operaciones
-                que consisten en hacer que los fondos obtenidos a través de las comisión de delitos, aparezcan
-                como el fruto de actividades legales
-                y circulen sin problema
-                en el sistema financiero.
-            </span>
         </div>
-        <span id="cont02">
-                El Lavado de Dinero es el proceso
-                a través del cual es encubierto el origen de los fondos generados mediante el ejercicio de algunas
-                actividades ilegales o criminales (tráfico de drogas, estupefacientes, contrabando de armas, corrupción,
-                fraude, prostitución, extorsión, piratería) y que circulen en
-                el sistema financiero.
-                Es el proceso de hacer
-                que el dinero sucio
-                parezca limpio.
-    
-        </span>
-        <div id="cont03">
+        <div class="cont-pag03" id="cont02">
+            <div class="card03">
+                <span id="texto02">
+                    El Lavado de Dinero es el proceso
+                    a través del cual es encubierto el origen de los fondos generados mediante el ejercicio de algunas
+                    actividades ilegales o criminales (tráfico de drogas, estupefacientes, contrabando de armas, corrupción,
+                    fraude, prostitución, extorsión, piratería) y que circulen en
+                    el sistema financiero.
+                    Es el proceso de hacer
+                    que el dinero sucio
+                    parezca limpio.
+                </span>
+                <figure class="personaje">
+                    <img src="./build/img/contenido/Pag03/personaje.svg" alt="personaje">
+                </figure>
+            </div>
+        </div>
+        <div class="cont-pag03" id="cont03">
             <span id="FT">Financiamiento al Terrorismo</span>
-            <div id="cont03-imagen">
+            <div class="card03">
                 <figure class="terrorista">
                     <img src="./build/img/contenido/Pag03/terrorista.svg" alt="terrorista">
                 </figure>
+                <span id="texto03">
+                    Proceso para obtener los bienes/recursos de procedencia lícita/ilícita, para presionar a los
+                    gobiernos
+                    generando terror/temor en la población a través de actos que ponen en peligro la vida, la integridad
+                    física o libertad, valiéndose de instrumentos capaces
+                    de causar estragos.
+                </span>
             </div>
-            <span id="texto03">
-                Proceso para obtener los bienes/recursos de procedencia lícita/ilícita, para presionar a los gobiernos
-                generando terror/temor en la población a través de actos que ponen en peligro la vida, la integridad
-                física o libertad, valiéndose de instrumentos capaces
-                de causar estragos.
-            </span>
         </div>
     </div>
 </body>
