--- a/contenido/pag06.html
+++ b/contenido/pag06.html
@@ -26,12 +26,12 @@
             <div id="claro"></div>
             <div id="columnas">
                 <div id="libro1">
-                    <a href="#cuadro1" class="btn-info01">
+                    <a href="#cuadro1" onclick="visualizarCuadro1()">
                         <figure class="libro1">
                             <img src="./build/img/contenido/Pag06/libro1.svg" alt="libro1">
                         </figure>
                     </a>
-                    <div  class ="cuadro1" id="cuadro">
+                    <div  class ="cuadro1" id="cuadro1">
                         <span class="texto1">
                             Por parte de un auditor independiente o una certificación de la institución extranjera, en
                             el que explique que la institución da cumplimiento a obligaciones similares a las
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div id="libro2">
-                    <a href="#cuadro2" class="btn-info02">
+                    <a href="#cuadro2" onclick="visualizarCuadro2()" >
                         <figure class="libro2">
                             <img src="./build/img/contenido/Pag06/libro2.svg" alt="libro2">
                         </figure>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div id="libro3">
-                    <a href="#cuadro3" class="btn-info03">
+                    <a href="#cuadro3" onclick="visualizarCuadro3()">
                         <figure class="libro3">
                             <img src="./build/img/contenido/Pag06/libro3.svg" alt="libro3">
                         </figure>
