:sparkles: Arreglos de diseño

--- a/contenido/pag06.html
+++ b/contenido/pag06.html
@@ -26,12 +26,12 @@
             <div id="claro"></div>
             <div id="columnas">
                 <div id="libro1">
-                    <a href="#cuadro1" onclick="visualizarCuadro1()">
+                    <a class="btn_cuadros06" href="#cuadro1">
                         <figure class="libro1">
                             <img src="./build/img/contenido/Pag06/libro1.svg" alt="libro1">
                         </figure>
                     </a>
-                    <div  class ="cuadro1" id="cuadro1">
+                    <div  class ="cuadros6" id="cuadro1">
                         <span class="texto1">
                             Por parte de un auditor independiente o una certificación de la institución extranjera, en
                             el que explique que la institución da cumplimiento a obligaciones similares a las
@@ -41,12 +41,12 @@
                     </div>
                 </div>
                 <div id="libro2">
-                    <a href="#cuadro2" onclick="visualizarCuadro2()" >
+                    <a class="btn_cuadros06" href="#cuadro2">
                         <figure class="libro2">
                             <img src="./build/img/contenido/Pag06/libro2.svg" alt="libro2">
                         </figure>
                     </a>
-                    <div id="cuadro2">
+                    <div class ="cuadros6" id="cuadro2">
                         <span class="texto2">
                             <li>Conocer el negocio al que se dedican las contrapartes.</li>
                             <li>Evaluar sus controles para determinar que cumplen con los estándares internacionales
@@ -61,12 +61,12 @@
                     </div>
                 </div>
                 <div id="libro3">
-                    <a href="#cuadro3" onclick="visualizarCuadro3()">
+                    <a class="btn_cuadros06" href="#cuadro3">
                         <figure class="libro3">
                             <img src="./build/img/contenido/Pag06/libro3.svg" alt="libro3">
                         </figure>
                     </a>
-                    <div id="cuadro3">
+                    <div class ="cuadros6" id="cuadro3">
                         <span class="texto3">
                             De acuerdo con la información
                             de las autoridades mexicanas en materia de prevención PLD/CFT, las Aseguradoras deberán
