--- a/contenido/pag03.html
+++ b/contenido/pag03.html
@@ -9,52 +9,38 @@
 </head>
 
 <body>
-    <div id="cont-gris">
-        <div class="cont-pag03" id="cont01">
-            <span id="LD">Lavado de Dinero</span>
-            <div class="card03">
-                <figure class="lavadora">
-                    <img src="./build/img/contenido/Pag03/lavadora.svg" alt="Lavadora">
-                </figure>
-                <span id="texto01">
-                    Son los actos/operaciones
-                    que consisten en hacer que los fondos obtenidos a través de las comisión de delitos, aparezcan
-                    como el fruto de actividades legales
-                    y circulen sin problema
-                    en el sistema financiero.
-                </span>
-            </div>
+    <div class="cont-info03">
+        <div id="tarjeta01" class="tarjetas03">
+            <h4 id="h4_1">Lavado de Dinero</h4>
+            <div class="cont-tarjeta">
+                <div class="imagenes">
+                    <figure class="cont-imagen">
+                        <img src="/build/img/contenido/Pag03/lavadora.svg" alt="lavadora">
+                    </figure> 
+                </div>
+                <p>Son los actos/operaciones que consisten en hacer que los fondos obtenidos a través de las comisión de delitos, aparezcan como el fruto de actividades legales y circulen sin problema en el sistema financiero.</p>  
+            </div> 
         </div>
-        <div class="cont-pag03" id="cont02">
-            <div class="card03">
-                <span id="texto02">
-                    El Lavado de Dinero es el proceso
-                    a través del cual es encubierto el origen de los fondos generados mediante el ejercicio de algunas
-                    actividades ilegales o criminales (tráfico de drogas, estupefacientes, contrabando de armas, corrupción,
-                    fraude, prostitución, extorsión, piratería) y que circulen en
-                    el sistema financiero.
-                    Es el proceso de hacer
-                    que el dinero sucio
-                    parezca limpio.
-                </span>
-                <figure class="personaje">
-                    <img src="./build/img/contenido/Pag03/personaje.svg" alt="personaje">
+        <div id="tarjeta02" class="tarjetas03">
+            <p>
+                El Lavado de Dinero es el proceso a través del cual es encubierto el origen de los fondos generados mediante el ejercicio de algunas actividades ilegales o criminales (tráfico de drogas, estupefacientes, contrabando de armas, corrupción, fraude, prostitución, extorsión, piratería) y que circulen en el sistema financiero. Es el proceso de hacer que el dinero sucio parezca limpio.
+            </p>
+            <div class="imagenes">
+                <figure class="cont-imagen">
+                    <img src="/build/img/contenido/Pag03/personaje.svg" alt="terroristas">
                 </figure>
             </div>
         </div>
-        <div class="cont-pag03" id="cont03">
-            <span id="FT">Financiamiento al Terrorismo</span>
-            <div class="card03">
-                <figure class="terrorista">
-                    <img src="./build/img/contenido/Pag03/terrorista.svg" alt="terrorista">
-                </figure>
-                <span id="texto03">
-                    Proceso para obtener los bienes/recursos de procedencia lícita/ilícita, para presionar a los
-                    gobiernos
-                    generando terror/temor en la población a través de actos que ponen en peligro la vida, la integridad
-                    física o libertad, valiéndose de instrumentos capaces
-                    de causar estragos.
-                </span>
+        <div id="tarjeta03" class="tarjetas03">
+            <h4 id="h4_2">Financiamiento al terrorismo</h4>
+            
+            <div class="cont-tarjeta">
+                <div class="imagenes">
+                    <figure class="cont-imagen">
+                        <img src="/build/img/contenido/Pag03/terrorista.svg" alt="terroristas">
+                    </figure>
+                </div>
+                <p>Proceso para obtener los bienes/recursos de procedencia lícita/ilícita, para presionar a los gobiernos generando terror/temor en la población a través de actos que ponen en peligro la vida, la integridad física o libertad, valiéndose de instrumentos capaces de causar estragos.</p>
             </div>
         </div>
     </div>
