--- a/contenido/pag07.html
+++ b/contenido/pag07.html
@@ -7,6 +7,13 @@
     <title>Página 07</title>
 </head>
 <body>
-    Página 07
+    <div id="pag07">
+        <figure id="conversacion">
+            <img src="./build/img/contenido/Pag07/conversacion.svg" alt="conversacion">
+        </figure>
+        <div id="entrevista">
+            <p>prueba</p>
+        </div>
+    </div>
 </body>
 </html>
