--- a/contenido/pag11.html
+++ b/contenido/pag11.html
@@ -7,6 +7,84 @@
     <title>Página 11</title>
 </head>
 <body>
-    Página 11
+    <div id="cont-intro11">
+        <div class="instrucciones-mano">
+            <div class="cont-imagen">
+                <img src="./build/img/contenido/Pag11/Mano.svg" alt="mano">
+            </div>
+            <p>
+                Da clic en cada tarjeta para conocer más detalles.
+            </p>
+        </div>
+    </div>
+    <div id="cont-tarjetas-flip">
+        <div class="cards" id="flip1">
+            <div class="front caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones relevantes</h3>
+                </div>
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag11/Billetes.svg" alt="billetes">
+                </figure>
+                <div class="cont-mensaje-front">
+                    <p>Operación en efectivo realizada una sola exhibición por el equivalente o más de $7,500 dólares.</p>
+                </div>
+            </div>
+            <div class="back caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones relevantes</h3>
+                </div>
+                <div class="cont-mensaje-back">
+                    <p>Operación que se realiza en una sola exhibición, en efectivo, así como cheques de viajero y monedas acuñadas en platino, oro y plata; por un monto igual o superior al equivalente en moneda nacional a siete mil quinientos dólares de los Estados Unidos de América. Los principales encargados de ejecutar estas actividades son las áreas de administración de recursos como por ejemplo finanzas y siniestros.</p>
+                    <p>Dentro de los primeros 10 días de enero, abril, julio y octubre de cada año, se envía el reporte de estas operaciones a la SHCP por conducto de la CNSF.</p>
+                    <p>Incluso sin haber realizado estas operaciones, debemos enviar un reporte en ceros a través de SEIVE (Sistema de Entrega de Información Vía Electrónica).</p>
+                </div>
+            </div>
+        </div>
+        <div class="cards" id="flip2">
+            <div class="front caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones inusuales</h3>
+                </div>
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag11/Lupa.svg" alt="lupa">
+                </figure>
+                <div class="cont-mensaje-front">
+                    <p>Operación o conducta que no concuerde con los antecedentes, actividades, operaciones o conductas del cliente.</p>
+                </div>
+            </div>
+            <div class="back caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones inusuales</h3>
+                </div>
+                <div class="cont-mensaje-back">
+                    <p>Operación o conducta de un cliente que no concuerde con los antecedentes o actividad conocida por la Compañía, o declarada a ésta, o con el perfil transaccional inicial o habitual de dicho cliente, en función al origen o destino de los recursos, así como al monto, frecuencia, tipo o naturaleza de la operación de que se trate, sin que exista una justificación razonable para dicha operación, actividad, conducta o comportamiento; o bien, aquella operación, actividad, conducta o comportamiento que un cliente realice o pretenda realizar con la Compañía. Debe reportarse a la SHCP por conducto de la CNSF  dentro de los primeros 60 días naturales a partir de que se genera la alerta correspondiente a través de SEIVE.</p>
+                </div>
+            </div>
+        </div>
+        <div class="cards" id="flip3">
+            <div class="front caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones internas preocupantes</h3>
+                </div>
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag11/Persona.svg" alt="persona">
+                </figure>
+                <div class="cont-mensaje-front">
+                    <p>Operaciones o conductas realizadas por los Colaboradores de la Compañía relacionadas con el LD y FT.
+                    </p>
+                </div>
+            </div>
+            <div class="back caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones internas preocupantes</h3>
+                </div>
+                <div class="cont-mensaje-back">
+                    <p>Operación, actividad, conductao comportamiento de cualquiera de los Funcionarios, Colaboradores y Agentes de la Compañía, que por sus características, pudiera contravenir, vulnerar o evadir la aplicación de lo dispuesto por la LISF; o aquella, que por cualquier otra causa, resulte dudosa para la Institución por considerar que pudiese favorecer o no alertar sobre la actualización de clientes que pudieran ubicarse en alguno de los supuestos previstos en los artículos 139, 139 Quáter, 148 Bis o 400 Bis del Código Penal Federal.</p>
+                    <p>Debe reportarse a la SHCP por conducto de la CNSF dentro de los primeros 60 días naturales a partir de que se genera la alerta correspondiente a través de SEIVE. </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
