--- a/contenido/pag07.html
+++ b/contenido/pag07.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 07</title>
 </head>
+
 <body>
     <div id="pag07">
         <figure id="conversacion">
             <img src="./build/img/contenido/Pag07/conversacion.svg" alt="conversacion">
         </figure>
-        <div id="entrevista">
-            <p>prueba</p>
+        <span id="entrevista">
+            <h2>Objetivo de la entrevista</h2>
+            <li>Recabar datos y documentos de identificación.</li>
+            <li>Recabar la declaración firmada del cliente para comprobar si actúa
+                por sí mismo o por un tercero.
+            </li>
+            <li>Documentar y dejar constancia de la entrevista en un expediente.</li>
+        </span>
+    </div>
+    <div id="pag07-2">
+        <figure class="personaje">
+            <img src="./build/img/contenido/Pag07/personaje.svg" alt="personaje">
+        </figure>
+        <div id="globo">
+            Elige tu perfil para identificar la herramienta que debes usar durante la entrevista.
+        </div>
+        <div id="cont-blanco">
+            <div class="btn01">
+                <div id="btn-seguros">
+                    <a class="btn_cuadros07" href="#info-seguros">General de Seguros y General de Salud</a>
+                </div>
+                <div class ="cuadros07" id="info-seguros">
+                    <span>Utiliza el formato de Identificación del Cliente con prima anual de mayor a $7,500 dólares.</span>
+                </div>
+            </div>
+            <div class="btn02">
+                <div id="btn-reaseguradora">
+                    <a class="btn_cuadros07" href="#info-reaseguradora">Reaseguradora <p>Patria</p></a>
+                </div>
+                <div class ="cuadros07" id="info-reaseguradora">
+                    <span>Utiliza el formato de Identificación de la Cedente.</span>
+                </div>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
