--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
         <i class="fa-solid fa-circle-arrow-right" id="adelante"></i>
     </div>
 
+    <!-- Bootstrap -->
+    <script src="build/js/bootstrap.bundle.min.js"></script>
     <script src="build/js/bundle.js"></script>
 </body>
 </html>
