:page_with_curl: acomodo bootstrap

--- a/contenido/pag13.html
+++ b/contenido/pag13.html
@@ -7,6 +7,6 @@
     <title>Página 13</title>
 </head>
 <body>
-    <a href="" class="btn btn-primary">Boton 1</a>
+    <a id="btn13" href="" class="btn btn-primary">Boton 1</a>
 </body>
 </html>
